[gd_scene load_steps=16 format=2]

[ext_resource path="res://Fallout DeMakeUs Sprites/NPC/NPC_female_idle1.png" type="Texture" id=1]
[ext_resource path="res://Fallout DeMakeUs Sprites/NPC/NPC_female_idle2.png" type="Texture" id=2]
[ext_resource path="res://Scripts/NPC_female.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Dialog_box.gd" type="Script" id=4]
[ext_resource path="res://Fallout DeMakeUs Sprites/fonts/PressStart2P-vaV7.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Fallout DeMakeUs Sprites/Pip_boy/Text_arrow_green.png" type="Texture" id=6]
[ext_resource path="res://Fallout DeMakeUs Sprites/NPC/NPC_male_merc_idle2.png" type="Texture" id=7]
[ext_resource path="res://Fallout DeMakeUs Sprites/NPC/NPC_male_merc_idle1.png" type="Texture" id=8]
[ext_resource path="res://Fallout DeMakeUs Sprites/NPC/Doc Mitchell_idle_1.png" type="Texture" id=9]
[ext_resource path="res://Fallout DeMakeUs Sprites/NPC/Doc Mitchell_idle_2.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 8 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "female_idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "male_idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "Doc_Mitchell",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 9 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 6 ), null ],
"loop": true,
"name": "arrow_blink",
"speed": 5.0
} ]

[node name="Merc_NPC" type="StaticBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 3 )
skin = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="NPC_skin" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "female_idle"

[node name="Interact_box" type="Area2D" parent="NPC_skin"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC_skin/Interact_box"]
shape = SubResource( 3 )

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Dialog_box" type="Popup" parent="CanvasLayer2"]
pause_mode = 2
visible = true
anchor_left = 0.5
anchor_top = 0.987
anchor_right = 0.5
anchor_bottom = 0.987
margin_left = -463.0
margin_top = -71.2
margin_right = 49.0
margin_bottom = -7.20001
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
dialog = [ "Hello!", "Welcome to Shady Sands!!" ]
NPC_Name = "Sunny Smiles"

[node name="Spoken_Dialog" type="RichTextLabel" parent="CanvasLayer2/Dialog_box"]
self_modulate = Color( 0.0117647, 0.996078, 0.0509804, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 4 )
text = "hello"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPC_Name" type="RichTextLabel" parent="CanvasLayer2/Dialog_box"]
self_modulate = Color( 0.0117647, 0.996078, 0.0509804, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 575.0
margin_top = -5.0
margin_right = 255.0
margin_bottom = -5.0
custom_fonts/normal_font = SubResource( 4 )
text = "Sunny Smiles"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text_arrow" type="AnimatedSprite" parent="CanvasLayer2/Dialog_box"]
position = Vector2( 498, 53 )
scale = Vector2( 2, 2 )
frames = SubResource( 5 )
animation = "arrow_blink"
[connection signal="area_entered" from="NPC_skin/Interact_box" to="CanvasLayer2/Dialog_box" method="_on_Interact_box_area_entered"]
[connection signal="area_exited" from="NPC_skin/Interact_box" to="CanvasLayer2/Dialog_box" method="_on_Interact_box_area_exited"]
